packages/hyperchad/template/tests/warnings/dynamic-attribute-names.stderr
error: expected one of: identifier, literal, `.`, `#`, curly braces, `;`
 --> tests/warnings/dynamic-attribute-names.rs:5:5
  |
5 | /     container! {
6 | |         div (name)="about:blank" {}
7 | |     };
  | |_____^
  |
  = note: this error originates in the macro `container` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `name`
 --> tests/warnings/dynamic-attribute-names.rs:4:9
  |
4 |     let name = "href";
  |         ^^^^ help: if this is intentional, prefix it with an underscore: `_name`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
