packages/hyperchad/template/tests/warnings/dynamic-attribute-names.rs
use hyperchad_template::container;

fn main() {
    let name = "href";
    container! {
        div (name)="about:blank" {}
    };
}
